fixed the title size on small viewports

--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@ body {
 
 .app-title {
   font-family: Poppins, sans-serif;
-  font-size: 4rem;
+  font-size: 2.5rem;
   font-weight: 400;
   text-align: center;
   margin-bottom: 3rem;
@@ -130,5 +130,9 @@ body {
 @media (min-width: 900px) {
   .App {
     width: 50vw;
+  }
+
+  .app-title {
+    font-size: 3.5rem;
   }
 }
